<resources>
    <string name="app_name">Games</string>
    <string name="news">新闻</string>
    <string name="live">直播</string>
    <string name="grils">美女</string>
    <string name="mine">我的</string>
    <string name="load_end">没有更多数据</string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="loading">正在加载中...</string>
    <string name="net_error">网络访问错误，请稍后再试</string>
    <string name="empty">还没有数据哦</string>
    <string name="reload">重新尝试</string>
    <string name="no_net">网络不可用,请检查你的网络</string>
    <string name="no_network_tip">网路连接超时</string>
    <string name="click_reloading">点击重新加载</string>
    <string name="loading_error">加载错误，请重试！</string>
    <string name="transition_grils">transition_grils</string>
    <string name="lol">英雄联盟</string>
    <string name="ow">守望先锋</string>
    <string name="hs">炉石传说</string>
    <string name="data2">DOTA2</string>
    <string name="csgo">CSGO</string>
    <string name="transition_live">transition_live</string>
    <string name="live_room_name">直播间名称</string>
    <string name="live_1080p">超清</string>
    <string name="live_720p">标清</string>
    <string name="send_danmaku_tip">输入发送弹幕(15字以内)</string>
    <string name="send">发送</string>
    <string name="live_360p">普清</string>
    <string name="danmaku_empty_tip">发送弹幕内容不能为空</string>
    <string name="danmuka_closed">弹幕已关闭！</string>
    <string name="danmuka_opened">弹幕已开启！</string>
</resources>
