<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_landscape"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#80000000">

        <ImageView
            android:id="@+id/iv_back_landscape"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/selector_btn_back" />

        <TextView
            android:id="@+id/tv_roomname_landscape"
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="match_parent"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:padding="5dp"
            android:scrollHorizontally="true"
            android:text="@string/live_room_name"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/controller_landscape_layout_stream"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:foreground="?selectableItemBackgroundBorderless"
            android:orientation="horizontal"
            android:padding="6dp">

            <Button
                android:id="@+id/btn_stream_1080p_landscape"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginRight="2.5dp"
                android:background="@drawable/ckb_stream_normal"
                android:foreground="?selectableItemBackgroundBorderless"
                android:text="@string/live_1080p"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_stream_360p_landscape"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2.5dp"
                android:background="@drawable/ckb_stream_normal"
                android:foreground="?selectableItemBackgroundBorderless"
                android:text="@string/live_720p"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="#80000000">

        <ImageView
            android:id="@+id/iv_play_pause_landscape"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/selector_btn_play" />

        <ImageView
            android:id="@+id/iv_refresh_landscape"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/selector_btn_refresh" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1.0"
            android:background="@drawable/img_danmaku_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_danmu_landscape"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/img_edit_danmaku_bg"
                android:hint="@string/send_danmaku_tip"
                android:maxLength="25"
                android:padding="3dp"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_send_landscape"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@null"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_danmu_visible_landscape"
            android:layout_width="40dp"
            android:layout_height="40dp"
             android:background="?selectableItemBackgroundBorderless"
            android:padding="7.5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/selector_danmaku_on" />


        <ImageView
            android:id="@+id/iv_fullscreen_exit_landscape"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/selector_fullscreen_exit" />

    </LinearLayout>


</RelativeLayout>